--- a/src/modules/auth/emails/templates/verify-email/i18n/en.json
+++ b/src/modules/auth/emails/templates/verify-email/i18n/en.json
@@ -3,7 +3,7 @@
     "subject": "Verify your email address",
     "title": "Verify your email address",
     "greeting": "Hello",
-    "intro": "Thank you for signing up to <strong>tallae</strong>! To complete your registration, please verify your email address using the code below:",
+    "intro": "Thank you for signing up to <strong>yorcela</strong>! To complete your registration, please verify your email address using the code below:",
     "codeLabel": "Verification code",
     "buttonText": "Verify my email",
     "alternativeText": "You can also click the button below to automatically verify your email:",
