--- a/src/modules/auth/emails/templates/verify-email/i18n/fr.json
+++ b/src/modules/auth/emails/templates/verify-email/i18n/fr.json
@@ -3,7 +3,7 @@
     "subject": "Vérifiez votre adresse email",
     "title": "Vérifiez votre adresse email",
     "greeting": "Bonjour",
-    "intro": "Merci de vous être inscrit(e) sur <strong>tallae</strong> ! Pour finaliser votre inscription, veuillez vérifier votre adresse email en utilisant le code ci-dessous :",
+    "intro": "Merci de vous être inscrit(e) sur <strong>yorcela</strong> ! Pour finaliser votre inscription, veuillez vérifier votre adresse email en utilisant le code ci-dessous :",
     "codeLabel": "Code de vérification",
     "buttonText": "Vérifier mon email",
     "alternativeText": "Vous pouvez également cliquer sur le bouton ci-dessous pour vérifier automatiquement votre email :",
